packages/taquito-michel-codec/test/contracts_013/ill_typed/uncomb1.tz
parameter unit;
storage unit;
code { UNPAIR 1 }
